--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,12 @@ body {
     font-weight: 300;
     font-size: 14px;
 }
+
+.container {
+    height: 100%;
+    width: 100%;
+    flex: auto;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
